# sddp

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md
backend/: .dockerignore  conftest.py  pyproject.toml  requirements.txt  test.db-shm  test.db-wal
backend/alembic/: env.py
backend/app/: cache.py  config.py  database.py  deps.py  exceptions.py  main.py  mongo_database.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_admin.py  test_agent_discovery.py  test_agent_work.py  test_api_keys.py  test_auth.py  test_batch_execution.py  test_invitations.py  test_iterations.py  test_pagination.py  test_path_utils.py  test_permission_enforcement.py  test_projects.py  test_requirement_guide.py  test_requirement_links.py  test_requirements.py  test_response_format.py  (+17 more)
cli/: publish.sh  pyproject.toml
cli/sdd_cli/: admin.py  auth.py  client.py  config.py  file_loader.py  invitations.py  iterations.py  main.py  me.py  output.py  projects.py  requirements.py  tasks.py  teams.py  test_cases.py  test_executions.py  users.py  webhooks.py
cli/tests/: conftest.py  test_admin.py  test_auth.py  test_client.py  test_config.py  test_file_loader.py  test_iterations.py  test_me.py  test_output.py  test_projects.py  test_requirements.py  test_tasks.py  test_teams.py  test_test_cases.py  test_test_executions.py
docker/: .env.example  deploy.sh  docker-compose.yml
docs/: cli-guide.md
frontend/: .dockerignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
scripts/: deploy-offline.sh  pack.sh  services.sh
(+219 files in other folders)
