[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdd-cli"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
sdd = "sdd_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdd_cli*"]
